--- a/TypeScript/Alura/ProjetoInicial/tsconfig.json
+++ b/TypeScript/Alura/ProjetoInicial/tsconfig.json
@@ -4,8 +4,10 @@
     "target": "ES6",
     "noEmitOnError": true,
     "noImplicitAny": true,
-    // "noUnusedParameters": true,
+    "noUnusedParameters": true,
     "noUnusedLocals": true,
+    "removeComments": true,
+    "strictNullChecks": true
   },
   "include": ["./app/**/*"]
 }
