--- a/TypeScript/Alura/ProjetoInicial/tsconfig.json
+++ b/TypeScript/Alura/ProjetoInicial/tsconfig.json
@@ -4,10 +4,11 @@
     "target": "ES6",
     "noEmitOnError": true,
     "noImplicitAny": true,
-    "noUnusedParameters": true,
-    "noUnusedLocals": true,
+    // "noUnusedParameters": true,
+    // "noUnusedLocals": true,
     "removeComments": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "experimentalDecorators": true
   },
   "include": ["./app/**/*"]
 }
