--- a/TypeScript/Alura/ProjetoInicial/tsconfig.json
+++ b/TypeScript/Alura/ProjetoInicial/tsconfig.json
@@ -8,7 +8,8 @@
     // "noUnusedLocals": true,
     "removeComments": true,
     "strictNullChecks": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "sourceMap": true
   },
   "include": ["./app/**/*"]
 }
