--- a/TypeScript/Alura/React+Ts/timer/tsconfig.json
+++ b/TypeScript/Alura/React+Ts/timer/tsconfig.json
@@ -21,9 +21,12 @@
     "jsx": "react-jsx",
     
     // Added configs ----
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "plugins": [{"name": "typescript-plugin-css-modules"}]
   },
   "include": [
-    "src"
+    "src",
+    "./declarations.d.ts"
   ]
 }
+
