--- a/TypeScript/Alura/React+Ts/timer/package.json
+++ b/TypeScript/Alura/React+Ts/timer/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.3",
+    "uu": "^0.0.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "sass": "^1.52.2",
     "typescript-plugin-css-modules": "^3.4.0"
   }
