--- a/TypeScript/Alura/static-files/tsconfig.json
+++ b/TypeScript/Alura/static-files/tsconfig.json
@@ -19,9 +19,14 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "baseUrl": "src",
+    // ---
+    "noImplicitAny": true,
     "plugins": [{"name": "typescript-plugin-css-modules"}]
   },
   "include": [
-    "src"
-  ]
+    "src",
+    "./declarations.d.ts"
+  ],
+  
 }
