--- a/TypeScript/Alura/React+Ts/static-files/tsconfig.json
+++ b/TypeScript/Alura/React+Ts/static-files/tsconfig.json
@@ -19,10 +19,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "src",
     // ---
     "noImplicitAny": true,
-    "plugins": [{"name": "typescript-plugin-css-modules"}]
+    "plugins": [{"name": "typescript-plugin-css-modules"}],
+    "baseUrl": "src"
   },
   "include": [
     "src",
