--- a/TypeScript/Alura/React+Ts/static-files/package.json
+++ b/TypeScript/Alura/React+Ts/static-files/package.json
@@ -14,7 +14,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
     "uuidv4": "^6.2.13",
@@ -49,6 +49,7 @@
     "@typescript-eslint/parser": "^5.29.0",
     "eslint": "^8.18.0",
     "eslint-plugin-react": "^7.30.1",
+    "react-icons": "^4.4.0",
     "sass": "^1.52.3",
     "typescript-plugin-css-modules": "^3.4.0"
   }
